2007-11-18  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-16-00
	* gui rewrite/cleanup
	* Iterator cleanup
	* removed Converter.java

2007-11-14  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-15-06
	* add ability to convert a fragment (*.cff) in gui's convert
	dialog

2007-11-14  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-15-05
	* fix ascii converter: sequences converted before paths (UB)

2007-11-14  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-15-04
	* oracle-related (what else?) bug fix to ConfDB.java

2007-11-14  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-15-03
	* fix ordering bug (oracle) reported by Martin
	* fix convert dialog to correctly handle requested
	sequences/modules

2007-11-13  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-15-02
	* when renaming modules, propagate the new label to all relevant
	downstream InputTag parameters

2007-11-13  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-15-01
	* important bug reported by Marco fixed, regarding the
	manipulation of a configurations sequences and its correct
	reflection in the db after saving.
	* uncovered and fixed some other bugs related with sequence
	manipulation in the gui ...

2007-11-12  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-15-00
	* gui: new 'convert' dialog (menu Configurations -> Convert)

2007-11-08  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-14-07
	* fix ant target war
	* first import of OfflineConverter

2007-11-07  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-14-06
	* ConfigurationModifier.insertDaqSource(): disregard if the
	configuration has already a DaqSource defined!

2007-11-07  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-14-05
	* one more bugfix, to confdb.data.ModifierInstructions
